# bps_wilayah

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
src/: app_data.rs  main.rs  utility.rs
src/services/: deserialize.rs  mod.rs  struct_wilayah.rs  wilayah.rs  wilayah_desa.rs  wilayah_kabupaten.rs  wilayah_kecamatan.rs  wilayah_provinsi.rs
